--- a/fitness-and-health-website/about-us.html
+++ b/fitness-and-health-website/about-us.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" type="text/css" href="stylesheet-about-us.css">
     <title>Über uns</title>
 </head>
-<body style="background-color: black; overflow: auto; padding: 0; margin-top: 8%">
+<body class="bg-black text-white" style="overflow-x: hidden; padding: 0; margin-top: 8%; overflow-y: auto">
 
-
-<div class="top-bar">
+<!-- Top Bar -->
+<div class="top-bar d-flex justify-content-between align-items-center px-4 py-3">
     <div class="menu-button-wrapper">
         <div class="menu-button">
             <span>☰</span>
         </div>
         <div class="sidebar">
-            <ul>
+            <ul class="list-unstyled">
                 <li class="li-items-in-sidebar"><a href="index.html" class="text-in-sidebar">Startseite</a></li>
                 <li class="li-items-in-sidebar"><a href="shop.html" class="text-in-sidebar">Shop</a></li>
                 <li class="li-items-in-sidebar"><a href="trainings-plan.html" class="text-in-sidebar">Training</a></li>
@@ -24,112 +24,82 @@
             </ul>
         </div>
     </div>
-    <h1 class="title">Wer sind wir</h1>
-
+    <h1 class="title text-center">Wer sind wir</h1>
     <div class="logo-wrapper">
-        <img src="icones/LOGO_05-remove.png" alt="Logo" class="logo">
+        <img src="icones/LOGO_05-remove.png" alt="Logo" class="logo img-fluid">
     </div>
 </div>
 
-    <table class = "tableStyleInAboutUs">
-        <tr>
-            <td class = "heightAndWidthForTdInAboutUs">
-                    <button class = "styleForButtonInAboutUsLeft">
-                        <img src = "icones/JanBild.png" alt = "Jan picture" class = "styleForImgInAboutUs">
-                        <p class="styleForPInAboutUs">Jan Brunner<br>Projektleiter</p>
+<!-- Team Members Section -->
+<div class="container mt-5">
+    <!-- Jan -->
+    <div class="row align-items-center mb-5">
+        <div class="col-md-4 text-center">
+            <button class="btn styleForButtonInAboutUsLeft">
+                <img src="icones/JanBild.png" alt="Jan picture" class="styleForImgInAboutUs img-fluid rounded mb-3">
+                <p class="styleForPInAboutUs">Jan Brunner<br>Projektleiter</p>
+            </button>
+        </div>
+        <div class="col-md-8">
+            <p class="styleForPInAboutUsWritingTextLeft">
+                Ich bin Jan Brunner, 15 Jahre alt und leite dieses Projekt zusammen mit meinen Schulkollegen. <br>
+                In meiner Freizeit beschäftige ich mich mit Webprogrammierung, sowie auch C# und C Programmierung.
+            </p>
+        </div>
+    </div>
 
-                    </button>
-            </td>
-            <td>
-                <p class = "styleForPInAboutUsWritingTextLeft">
-                    Ich bin Jan Brunner, 15 Jahre alt und leite dieses Projekt zusammen mit meinen Schulkollegen. <br>
-                    In meiner Freizeit beschäftige ich mich mit Webprogrammierung, sowie auch C# und C Programmierung.
-                </p>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <br>
-                <br>
-            </td>
-        </tr>
-    </table>
+    <!-- Lorenz -->
+    <div class="row align-items-center mb-5 flex-md-row-reverse">
+        <div class="col-md-4 text-center">
+            <button class="btn styleForButtonInAboutUsRight">
+                <img src="icones/LorenzBild.JPG" alt="Lorenz picture" class="styleForImgInAboutUs img-fluid rounded mb-3">
+                <p class="styleForPInAboutUs">Lorenz Parzer<br>Stellvertretender<br>Projektleiter</p>
+            </button>
+        </div>
+        <div class="col-md-8">
+            <p class="styleForPInAboutUsWritingTextRight">
+                Ich bin Lorenz Parzer, 16 Jahre alt und wohne in Österreich und ein Schüler und angehender Softwareentwickler an der HTL Leonding.<br>
+                In meiner Freizeit trainiere ich gerne, also gehe ins Fitnessstudio, versuche mich zu verbessern in allen Facetten. <br>
+                Ich liebe es zu Programmieren und besuche gerne die HTL Leonding.
+            </p>
+        </div>
+    </div>
 
-    <table class = "tableStyleInAboutUs">
-        <tr>
-            <td>
-                <p class = "styleForPInAboutUsWritingTextRight">
-                    Ich bin Lorenz Parzer, 16 Jahre alt und wohne in Österreich und ein Schüler und angehender Softwareentwickler an der HTL Leonding.<br>
-                    In meiner Freízeit trainiere ich gerne, also gehe ins Fitnessstudio, versuche mich zu verbesseren in allen Fasseten. <br>
-                    Ich liebe es zu Programmieren und besuche gerne die HTL Leonding
-                </p>
-            </td>
+    <!-- Ernad -->
+    <div class="row align-items-center mb-5">
+        <div class="col-md-4 text-center">
+            <button class="btn styleForButtonInAboutUsLeft">
+                <img src="icones/ErnadPhoto.jpg" alt="Ernad picture" class="styleForImgInAboutUs img-fluid rounded mb-3">
+                <p class="styleForPInAboutUs">Ernad Music<br>Mitarbeiter</p>
+            </button>
+        </div>
+        <div class="col-md-8">
+            <p class="styleForPInAboutUsWritingTextLeft">
+                Mein Name ist Ernad Music und ich bin Schüler der HTL Leonding und einer der Entwickler dieser Website. <br>
+                Ich bin 16 und ursprünglich in Bosnien geboren. <br>
+                Meine großen Hobbys sind das Coden in C# und das Erlernen neuer Dinge über das Programmieren.
+            </p>
+        </div>
+    </div>
 
-            <td class = "heightAndWidthForTdInAboutUs">
-                <button class = "styleForButtonInAboutUsRight">
-                    <img src = "icones/LorenzBild.JPG" alt = "Lorenz picture" class = "styleForImgInAboutUs">
-                    <p class="styleForPInAboutUs">Lorenz Parzer<br>Stellvertretender<br>Projektleiter</p>
+    <!-- Mario -->
+    <div class="row align-items-center mb-5 flex-md-row-reverse">
+        <div class="col-md-4 text-center">
+            <button class="btn styleForButtonInAboutUsRight">
+                <img src="icones/MarioBild.jpg" alt="Mario picture" class="styleForImgInAboutUs img-fluid rounded mb-3">
+                <p class="styleForPInAboutUs">Mario Solomun<br>Mitarbeiter</p>
+            </button>
+        </div>
+        <div class="col-md-8">
+            <p class="styleForPInAboutUsWritingTextRight">
+                Mein Name ist Mario Solomun und ich bin Teil der Entwickler von dieser Webseite. <br>
+                Ich bin Schüler an der HTL Leonding und besuche momentan den zweiten Jahrgang vom Zweig Informatik. <br>
+                Ich bin 16 Jahre alt und zu meinen Hobbies zählen das Programmieren und ich verbringe sehr gerne Zeit mit Freunden und Familie.
+            </p>
+        </div>
+    </div>
+</div>
 
-                </button>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <br>
-                <br>
-            </td>
-        </tr>
-    </table>
-
-    <table class = "tableStyleInAboutUs">
-        <tr>
-            <td class = "heightAndWidthForTdInAboutUs">
-                <button class = "styleForButtonInAboutUsLeft">
-                    <img src = "icones/ErnadPhoto.jpg" alt = "Ernad picture" class = "styleForImgInAboutUs">
-                    <p class="styleForPInAboutUs">Ernad Music<br>Mitarbeiter</p>
-
-                </button>
-            </td>
-            <td>
-                <p class = "styleForPInAboutUsWritingTextLeft">
-                    Mein Name ist Ernad Music und ich bin Schüler der HTL Leonding und einer der Entwickler dieser Website. <br>
-                    Ich bin 16 und ursprünglich in Bosnien geboren. <br>
-                    Meine großen Hobbys sind das Coden in C# und das Erlernen neuer Dinge über das Programmieren.
-                </p>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <br>
-                <br>
-            </td>
-        </tr>
-    </table>
-
-    <table class = "tableStyleInAboutUs">
-        <tr>
-            <td>
-                <p class = "styleForPInAboutUsWritingTextRight">
-                    Mein Name ist Mario Solomun und ich bin Teil der Entwickler von dieser Webseite. <br>
-                    Ich bin Schüler an der HTL Leonding und besuche momentan den zweiten Jahrgang vom Zweig Informatik. <br>
-                    Ich bin 16 Jahre alt und zu meinen Hobbies zählen das Programmieren und ich verbringe sehr gerne Zeit mit Freunden und Familie.
-                </p>
-            </td>
-
-            <td class = "heightAndWidthForTdInAboutUs">
-                <button class = "styleForButtonInAboutUsRight">
-                    <img src = "icones/MarioBild.jpg" alt = "Mario picture" class = "styleForImgInAboutUs">
-                    <p class="styleForPInAboutUs">Mario Solomun<br>Mitarbeiter</p>
-
-                </button>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <br>
-                <br>
-            </td>
-        </tr>
-    </table>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
