--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -5,6 +5,7 @@
     <title>Trainingspläne</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheet-training-plans.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
