--- a/fitness-and-health-website/about-us.html
+++ b/fitness-and-health-website/about-us.html
@@ -101,6 +101,71 @@
     </div>
 </div>
 
+<div class="container my-" style = "margin-top: 5%; margin-bottom: 5%">
+
+    <footer class="text-center text-lg-start border border-white mt-xl-5 pt-4">
+        <!-- Grid container -->
+        <div class="container p-4">
+            <!--Grid row-->
+            <div class="row">
+                <!--Grid column-->
+                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <h5 class="text-uppercase mb-4" style = "color: yellow">Unsere Welt</h5>
+
+                    <ul class="list-unstyled mb-4">
+                        <li>
+                            <a href="shop.html" class="text-white hover-effects">Shop</a>
+                        </li>
+                        <li>
+                            <a href="trainings-plan.html" class="text-white hover-effects">Trainingspläne</a>
+                        </li>
+                        <li>
+                            <a href="nutrition.html" class="text-white hover-effects">Ernährungspläne</a>
+                        </li>
+                        <li>
+                            <a href="about-us.html" class="text-white hover-effects">Über uns</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--Grid column-->
+
+
+
+                <!--Grid column-->
+                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <h5 class="text-uppercase mb-4" style = "color: yellow">Karriere</h5>
+
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="#!" class="text-white hover-effects">Jobs</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--Grid column-->
+
+                <!--Grid column-->
+                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <h5 class="text-uppercase mb-4" style = "color: yellow">Kontaktiere uns</h5>
+
+                    <div class="form-outline form-white mb-4">
+                        <a href = "mailto:brunnerjan1102@gmail.com" class = "styleForEmailInMain hover-effects">Klicke hier</a>
+
+                    </div>
+
+                </div>
+                <!--Grid column-->
+                <div class = "col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <img src="icones/LOGO_05-remove.png" class = "bg-image hover-overlay ripple shadow-1-strong rounded" style = "width: 50%">
+                </div>
+            </div>
+            <!--Grid row-->
+        </div>
+        <!-- Grid container -->
+
+    </footer>
+
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
