--- a/fitness-and-health-website/trainings-plan-disabled.html
+++ b/fitness-and-health-website/trainings-plan-disabled.html
@@ -3,20 +3,53 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="stylesheet-training-plan-subpages.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trainingspläne für Beeinträchtigte</title>
 </head>
 <body>
-<div class="top-bar">
-  <div class="menu-button-wrapper">
-    <div class="menu-button">
-      <a style="color: yellow" href="trainings-plan.html"><span>⮐</span></a>
+<!-- Sticky Top Bar -->
+<nav class="navbar navbar-expand-lg navbar-dark navbar-fixed" style = "background-color: black" >
+  <div class="container-fluid">
+
+    <img src="icones/new-logo-gredient.png" alt="Home" width="50" height="50">
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <a class="nav-link textInNavBar" href="index.html">
+            <img src="icones/bxs-home.svg" class = "changeColor" alt="Shop" width="20" height="20"> Home
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link textInNavBar"  href="shop.html">
+            <img src="icones/bx-shopping-bag.svg" class="changeColor" alt="Shop" width="20" height="20"> Produkte
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link textInNavBar" href="nutrition.html">
+            <img src="icones/bx-baguette.svg" class="changeColor" alt="Ernährungspläne" width="20" height="20"> Ernährungspläne
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link textInNavBar" href="trainings-plan.html">
+            <img src="icones/bx-run.svg" class="changeColor" alt="Trainingspläne" width="20" height="20"> Trainingspläne
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link textInNavBar" href="about-us.html">
+            <img src="icones/bxs-group.svg"  class="changeColor" alt="Über uns" width="20" height="20"> Über uns
+          </a>
+        </li>
+      </ul>
     </div>
   </div>
-  <h1 class="title">Trainingspläne für Beeinträchtigte</h1>
-  <div class="logo-wrapper">
-    <img src="icones/LOGO_05-remove.png" alt="Logo" class="logo">
-  </div>
+</nav>
+
 </div>
 </body>
 </html>
