--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -7,10 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheet-training-plans.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
 <!-- Sticky Top Bar -->
 <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed" style = "background-color: black" >
     <div class="container-fluid">
@@ -82,23 +80,33 @@
         </section>
     </main>
 </div>
-<div class="d-flex justify-content-center m-3">
-    <div class="card m-1">
-        <div class="card-body">
-            <h5 class="card-title">Beeinträchtigte</h5>
-            <p class="card-text">Link zu den Trainingsplänen</p>
-            <a href="trainings-plan-disabled.html" class="btn btn-primary">Entdecke mehr</a>
-
+<div class="container m-3">
+    <div class="row justify-content-center">
+        <!-- Erste Karte -->
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-3 margin-good">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Beeinträchtigte</h5>
+                    <p class="card-text">Link zu den Trainingsplänen</p>
+                    <a href="trainings-plan-disabled.html" class="btn btn-primary">Entdecke mehr</a>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="card m-1">
-        <div class="card-body">
-            <h5 class="card-title">Ältere</h5>
-            <p class="card-text">Link zu den Trainingsplänen</p>
-            <a href="trainings-plan-old.html" class="btn btn-primary">Entdecke mehr</a>
+        <!-- Zweite Karte -->
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-3 margin-good">
+            <div class="card">
+                <div class="card-body" >
+                    <h5 class="card-title">Ältere</h5>
+                    <p class="card-text">Link zu den Trainingsplänen</p>
+                    <a href="trainings-plan-old.html" class="btn btn-primary">Entdecke mehr</a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
+
+
 
 <div class="explanation">
     <h2>Wieso Pläne für Ältere und Beeinträchtigte?</h2>
